--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -20,8 +20,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView"
-                android:background="@drawable/mine"
+                android:id="@+id/img_userpic"
+                android:background="@drawable/pet"
                 android:layout_gravity="center" />
         </FrameLayout>
 
@@ -38,7 +38,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Misaya"
                 android:textColor="@color/holo_primary_dark"
-                android:id="@+id/textView7"
+                android:id="@+id/mine_tv_username"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true" />
 
@@ -46,8 +46,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="简介:"
-                android:id="@+id/textView13"
+                android:text="简介:这个家伙很懒 什么也没有留下"
+                android:id="@+id/mine_tv_introduce"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="false" />
@@ -60,7 +60,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="top|center"
-        android:layout_marginTop="120dp">
+        android:layout_marginTop="120dp"
+        android:id="@+id/mine_layout_updatainfo">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -109,7 +110,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="top|center"
-        android:layout_marginTop="170dp" >
+        android:layout_marginTop="170dp"
+        android:id="@+id/mine_layout_history">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -157,16 +159,16 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/style"
         android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="30dp">
+        android:layout_marginBottom="30dp"
+        android:id="@+id/mine_layout_unlogin">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="退出登录"
-            android:id="@+id/textView24"
+            android:id="@+id/tv_mine_unlogin"
             android:layout_gravity="center" />
     </FrameLayout>
 
